--- a/css/cbf-programs-style.css
+++ b/css/cbf-programs-style.css
@@ -120,8 +120,11 @@ img {
 }
 
 select {
-	max-width: 200px;
+  border: 1px solid #ccc;
 	overflow: hidden;
+  padding: 5px;
+  margin: 8px auto;
+  width: 100%;
 }
 
 .zoom {
@@ -671,8 +674,7 @@ input#slider {
 
 div#sliderbar {
 	text-align: center;
-	clear: both;
-	padding-top: 24px;
+	padding-top: 12px;
 }
 
 div#slidercontrols{
