Explicitly set font for the dropdowns

--- a/css/cbf-programs-style.css
+++ b/css/cbf-programs-style.css
@@ -125,6 +125,7 @@ select {
   padding: 5px;
   margin: 8px auto;
   width: 100%;
+  font-family: "Work Sans", helvetica, arial, sans-serif;
 }
 
 .zoom {
